--- a/Flask_Heroku_Introduction/Mnist_model/requirements.txt
+++ b/Flask_Heroku_Introduction/Mnist_model/requirements.txt
@@ -1,12 +1,13 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 aiohttp==3.7.4.post0
 aiohttp-retry==2.4.5
 appdirs==1.4.4
-argcomplete @ file:///tmp/build/80754af9/argcomplete_1618920853202/work
+argcomplete==1.12.3
 async-timeout==3.0.1
 atpublic==2.3
 attrs==21.2.0
-autopep8 @ file:///tmp/build/80754af9/autopep8_1620866417880/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+autopep8==1.5.7
+backcall==0.2.0
 cached-property==1.5.2
 certifi==2021.5.30
 cffi==1.14.6
@@ -16,8 +17,8 @@ click==8.0.1
 colorama==0.4.4
 commonmark==0.9.1
 configobj==5.0.6
-debugpy @ file:///tmp/build/80754af9/debugpy_1629222439586/work
-decorator @ file:///tmp/build/80754af9/decorator_1632776554403/work
+debugpy==1.4.1
+decorator==5.1.0
 dictdiffer==0.9.0
 diskcache==5.2.1
 distro==1.6.0
@@ -37,71 +38,75 @@ GitPython==3.1.24
 grandalf==0.6
 gunicorn==20.1.0
 idna==3.2
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1631906757572/work
+importlib-metadata==4.8.1
 ipykernel==6.4.1
-ipython @ file:///tmp/build/80754af9/ipython_1632141056704/work
+ipython==7.27.0
 ipython-genutils==0.2.0
 itsdangerous==2.0.1
-jedi @ file:///tmp/build/80754af9/jedi_1611333758854/work
+jedi==0.18.0
 Jinja2==3.0.2
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1630690655192/work
-jupyter-core @ file:///tmp/build/80754af9/jupyter_core_1612213308260/work
+jupyter-client==7.0.1
+jupyter-core==4.7.1
 mailchecker==4.0.12
 MarkupSafe==2.0.1
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
+matplotlib-inline==0.1.2
 multidict==5.2.0
 nanotime==0.5.2
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
+nest-asyncio==1.5.1
 networkx==2.6.3
 numpy==1.16.5
 packaging==21.0
 pandas==1.3.3
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
+parso==0.8.2
 pathspec==0.8.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pexpect==4.8.0
 phonenumbers==8.12.33
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+pickleshare==0.7.5
 Pillow==6.2.0
+pip==21.0.1
 ply==3.11
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
+prompt-toolkit==3.0.20
 psutil==5.8.0
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+ptyprocess==0.7.0
 pyasn1==0.4.8
-pycodestyle @ file:///tmp/build/80754af9/pycodestyle_1615748559966/work
+pycodestyle==2.7.0
 pycparser==2.20
 pydot==1.4.2
 pygit2==1.6.1
-Pygments @ file:///tmp/build/80754af9/pygments_1629234116488/work
+Pygments==2.10.0
 pygtrie==2.4.2
 pyparsing==2.4.7
 python-benedict==0.24.3
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+python-dateutil==2.8.2
 python-fsutil==0.5.0
 python-slugify==5.0.2
 pytz==2021.3
 PyYAML==5.4.1
-pyzmq @ file:///tmp/build/80754af9/pyzmq_1628267913491/work
+pyzmq==22.2.1
 requests==2.26.0
 rich==10.11.0
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
+setuptools==58.0.4
 shortuuid==1.0.1
 shtab==1.4.1
-six @ file:///tmp/build/80754af9/six_1623709665295/work
+six==1.16.0
 smmap==4.0.0
 tabulate==0.8.9
 text-unidecode==1.3
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-torch==1.9.1+cpu torchvision==0.10.1+cpu torchaudio==0.9.1 -f https://download.pytorch.org/whl/torch_stable.html
-tornado @ file:///tmp/build/80754af9/tornado_1606942283357/work
+toml==0.10.2
+torch==1.9.1+cpu
+tornado==6.1
 tqdm==4.62.3
-traitlets @ file:///tmp/build/80754af9/traitlets_1632522747050/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
+traitlets==5.1.0
+typing-extensions==3.10.0.2
 urllib3==1.26.7
 voluptuous==0.12.2
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+wcwidth==0.2.5
 Werkzeug==2.0.2
+wheel==0.37.0
 xmltodict==0.12.0
 yarl==1.6.3
 zc.lockfile==2.0
-zipp @ file:///tmp/build/80754af9/zipp_1625570634446/work
+zipp==3.5.0
+gdown
