restrict the memory usage using heroku.yml

--- a/Containerisation_Introduction/heroku.yml
+++ b/Containerisation_Introduction/heroku.yml
@@ -1,3 +1,9 @@
 build:
   docker:
     web: Dockerfile
+deploy:
+  resources:
+    limits:
+      memory: 450M
+    reservations:
+      memory: 200M
