added minikube binary to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -136,4 +136,4 @@ dmypy.json
 #files to ignore
 /session_1/model_pytorch.h5
 /Flask_Heroku_Introduction/Mnist_model/upload_folder
-
+minikube-linux-amd64
